deps/LAGraph/include/LAGraph.h


#define LAGRAPH_DATE "Feb 20, 2025"
#define LAGRAPH_VERSION_MAJOR  1
#define LAGRAPH_VERSION_MINOR  1
#define LAGRAPH_VERSION_UPDATE 5
    #define LAGRAPH_VANILLA 0
    #define LAGRAPH_SUITESPARSE 1
    #define LAGRAPH_SUITESPARSE 0
#define LAGRAPH_MAX_NAME_LEN GxB_MAX_NAME_LEN
#define LAGRAPH_MAX_NAME_LEN 128
#define LAGRAPH_INVALID_GRAPH                   (-1000)
#define LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED    (-1001)
#define LAGRAPH_IO_ERROR                        (-1002)
#define LAGRAPH_NOT_CACHED                      (-1003)
#define LAGRAPH_NO_SELF_EDGES_ALLOWED           (-1004)
#define LAGRAPH_CONVERGENCE_FAILURE             (-1005)
#define LAGRAPH_CACHE_NOT_NEEDED                ( 1000)
#define LAGRAPH_MSG_LEN 256
LAGRAPH_PUBLIC
int LAGraph_Malloc
(
    void **p,               
    size_t nitems,          
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Calloc
(
    void **p,               
    size_t nitems,          
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Realloc
(
    void **p,               
    size_t nitems_new,      
    size_t nitems_old,      
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Free            
(
    void **p,               
    char *msg
) ;
#define LAGRAPH_UNKNOWN (-1)
typedef enum
{
    LAGraph_ADJACENCY_UNDIRECTED = 0, 
    LAGraph_ADJACENCY_DIRECTED = 1,   
    LAGraph_KIND_UNKNOWN = LAGRAPH_UNKNOWN  
}
LAGraph_Kind ;
typedef enum
{
    LAGraph_FALSE = 0,      
    LAGraph_TRUE = 1,       
    LAGraph_BOOLEAN_UNKNOWN = LAGRAPH_UNKNOWN   
}
LAGraph_Boolean ;
typedef enum
{
    LAGraph_VALUE = 0,  
    LAGraph_BOUND = 1,  
    LAGraph_STATE_UNKNOWN = LAGRAPH_UNKNOWN,    
}
LAGraph_State ;
struct LAGraph_Graph_struct
{
    GrB_Matrix  A ;         
    LAGraph_Kind kind ;     
    GrB_Matrix AT ; 
    GrB_Vector out_degree ; 
    GrB_Vector in_degree ;  
    LAGraph_Boolean is_symmetric_structure ;    
    int64_t nself_edges ; 
    GrB_Scalar emin ;   
    LAGraph_State emin_state ;
    GrB_Scalar emax ;   
    LAGraph_State emax_state ;
} ;
typedef struct LAGraph_Graph_struct *LAGraph_Graph ;
LAGRAPH_PUBLIC
int LAGraph_Init
(
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_Init
(
    GrB_Mode mode,      
    void * (* user_malloc_function  ) (size_t),
    void * (* user_calloc_function  ) (size_t, size_t),
    void * (* user_realloc_function ) (void *, size_t),
    void   (* user_free_function    ) (void *),
    char *msg
) ;