graph/src/graph/graphblas/lagraph_bindings.rs

/* automatically generated by rust-bindgen 0.72.0 */

// Auto-generated LAGraph FFI bindings
#![allow(
    non_camel_case_types,
    non_upper_case_globals,
    non_snake_case,
    dead_code,
    improper_ctypes
)]
use super::{
    GrB_BinaryOp, GrB_Index, GrB_Info, GrB_Matrix, GrB_Mode, GrB_Monoid, GrB_Scalar, GrB_Semiring,
    GrB_Type, GrB_UnaryOp, GrB_Vector,
};

pub const LAGRAPH_DATE: &[u8; 13] = b"Sept 8, 2025\0";
pub const LAGRAPH_VERSION_MAJOR: u32 = 1;
pub const LAGRAPH_VERSION_MINOR: u32 = 2;
pub const LAGRAPH_VERSION_UPDATE: u32 = 1;
pub const LAGRAPH_VANILLA: u32 = 0;
pub const LAGRAPH_SUITESPARSE: u32 = 1;
pub const LAGRAPH_MAX_NAME_LEN: u32 = 128;
pub const LAGRAPH_INVALID_GRAPH: i32 = -1000;
pub const LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED: i32 = -1001;
pub const LAGRAPH_IO_ERROR: i32 = -1002;
pub const LAGRAPH_NOT_CACHED: i32 = -1003;
pub const LAGRAPH_NO_SELF_EDGES_ALLOWED: i32 = -1004;
pub const LAGRAPH_CONVERGENCE_FAILURE: i32 = -1005;
pub const LAGRAPH_CACHE_NOT_NEEDED: u32 = 1000;
pub const LAGRAPH_MSG_LEN: u32 = 256;
pub const LAGRAPH_UNKNOWN: i32 = -1;

// Opaque C FILE type (we don't use the FILE-based functions)
#[repr(C)]
pub struct FILE {
    _opaque: [u8; 0],
}

unsafe extern "C" {
    #[doc = " LAGraph_Malloc: allocates a block of memory.  Uses the ANSI C11 malloc\n function if LAGraph_Init was used, or the user_malloc_function passed to\n LAGr_Init.\n\n @param[out] p        handle to allocated memory.\n @param[in] nitems    number of items to allocate, each of size size_of_item.\n @param[in] size_of_item  bytes allocted = nitems*size_of_item.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_OUT_OF_MEMORY if out of memory.\n @retval GrB_NULL_POINTER if p is NULL on input."]
    pub fn LAGraph_Malloc(
        p: *mut *mut ::std::os::raw::c_void,
        nitems: usize,
        size_of_item: usize,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Calloc: allocates a block of memory and sets it to zero.  Uses the\n ANSI C11 malloc and memset functions if LAGraph_Init was used or if NULL\n was passed to LAGr_Init for the user_calloc_function, or the non-NULL\n user_calloc_function passed to LAGr_Init otherwise.\n\n @param[out] p        handle to allocated memory.\n @param[in] nitems    number of items to allocate, each of size size_of_item.\n @param[in] size_of_item  bytes allocted = nitems*size_of_item.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_OUT_OF_MEMORY if out of memory.\n @retval GrB_NULL_POINTER if p is NULL on input."]
    pub fn LAGraph_Calloc(
        p: *mut *mut ::std::os::raw::c_void,
        nitems: usize,
        size_of_item: usize,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Realloc: reallocates a block of memory.  Uses the ANSI C11 malloc,\n memcpy, and free functions if LAGraph_Init was used or if NULL was passed to\n LAGr_Init for the user_realloc_function, or the non-NULL\n user_realloc_function passed to LAGr_Init otherwise.  Note that unlike the\n ANSI C11 realloc function, this function requires the old size of block to\n be provided on input (nitems_old).  This size must be exact; behavior is\n undefined if the incorrect size is given.  The value nitems_old*size_of_item\n must be the same as nitems*size_of_item when the block of memory was\n allocated by LAGraph_Malloc or LAGraph_Calloc, or equal to\n nitems_new*size_of_item from the last call to LAGraph_Realloc.\n\n @param[in,out] p     handle to allocated memory.\n @param[in] nitems_new    new number of items to allocate.\n @param[in] nitems_old    prior number of items allocated.\n @param[in] size_of_item  size of each item.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_OUT_OF_MEMORY if out of memory.\n @retval GrB_NULL_POINTER if p is NULL on input."]
    pub fn LAGraph_Realloc(
        p: *mut *mut ::std::os::raw::c_void,
        nitems_new: usize,
        nitems_old: usize,
        size_of_item: usize,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGraph_Free: frees a block of memory.  The block must have been previously\n allocated by LAGraph_Malloc or LAGraph_Calloc.  If LAGraph_Malloc (&p, ...)\n is the pointer to the allocated block of memory, LAGraph_Free (&p, ...) is\n the method to free it.  The parameter is passed as &p so that p can be set\n to NULL on return, to guard against double-free.  LAGraph_Free does nothing\n if &p or p are NULL on input; this is not an error.\n\n @param[in,out] p     handle to allocated memory.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS in all cases."]
    pub fn LAGraph_Free(
        p: *mut *mut ::std::os::raw::c_void,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
#[repr(i32)]
#[doc = " LAGraph_Kind: the kind of a graph.  Currently, only two types of graphs are\n supported: undirected graphs and directed graphs.  Edge weights are assumed\n to be present.  Unweighted graphs can be represented by setting all entries\n present in the sparsity structure to the same value, typically 1.\n Additional types of graphs will be added in the future."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_Kind {
    #[doc = "< undirected graph.\n< G->A is square and symmetric; both upper and lower triangular parts\n< are present.  A(i,j) is the edge (i,j).  Results are undefined if\n< A is unsymmetric."]
    LAGraph_ADJACENCY_UNDIRECTED = 0,
    #[doc = "< directed graph.\n< G->A is square; A(i,j) is the edge (i,j)."]
    LAGraph_ADJACENCY_DIRECTED = 1,
    #[doc = "< unknown kind of graph (-1)."]
    LAGraph_KIND_UNKNOWN = -1,
}
#[repr(i32)]
#[doc = " LAGraph_Boolean: a boolean value (true or false) or unknown (-1)."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_Boolean {
    #[doc = "< the Boolean value is known to be false."]
    LAGraph_FALSE = 0,
    #[doc = "< the Boolean value is known to be true."]
    LAGraph_TRUE = 1,
    #[doc = "< Boolean value is unknown."]
    LAGraph_BOOLEAN_UNKNOWN = -1,
}
#[repr(i32)]
#[doc = " LAGraph_State describes the status of a cached property of a graph.  If the\n cached property is computed in floating-point arithmetic, it may have been\n computed with roundoff error, but it may still be declared as \"value\" if the\n roundoff error is expected to be small, or if the cached property was\n computed as carefully as possible (to within reasonable roundoff error).\n The \"bound\" state indicates that the cached property is an upper or lower\n bound, depending on the particular cached property.  If computed in\n floating-point arithmetic, an \"upper bound\" cached property may be actually\n slightly lower than the actual upper bound, because of floating-point\n roundoff."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum LAGraph_State {
    #[doc = "< cached property is a known value."]
    LAGraph_VALUE = 0,
    #[doc = "< cached property is a bound.\n< The bound is upper or lower, depending on the particular cached\n< property."]
    LAGraph_BOUND = 1,
    #[doc = "< the property is unknown."]
    LAGraph_STATE_UNKNOWN = -1,
}
#[repr(C)]
pub struct LAGraph_Graph_struct {
    #[doc = "< the adjacency matrix of the graph"]
    pub A: GrB_Matrix,
    #[doc = "< the kind of graph"]
    pub kind: LAGraph_Kind,
    #[doc = "< AT = A', the transpose of A, with the same type."]
    pub AT: GrB_Matrix,
    #[doc = "< a GrB_INT64 vector of length m, if A is m-by-n.\n< where out_degree(i) is the number of entries in A(i,:).  If\n< out_degree is sparse and the entry out_degree(i) is not present,\n< then it is assumed to be zero."]
    pub out_degree: GrB_Vector,
    #[doc = "< a GrB_INT64 vector of length n, if A is m-by-n.\n< where in_degree(j) is the number of entries in A(:,j).  If\n< in_degree is sparse and the entry in_degree(j) is not present,\n< then it is assumed to be zero.  If A is known to have a\n< symmetric structure, the convention is that the degree is held\n< in G->out_degree, and in G->in_degree is left as NULL."]
    pub in_degree: GrB_Vector,
    #[doc = "< For an undirected\n< graph, this cached property will always be implicitly true and\n< can be ignored.  The matrix A for a directed weighted graph\n< will typically be unsymmetric, but might have a symmetric\n< structure.  In that case, this scalar cached property can be\n< set to true. By default, this cached property is set to\n< LAGRAPH_UNKNOWN."]
    pub is_symmetric_structure: LAGraph_Boolean,
    #[doc = "< number of entries on the diagonal of A, or\n< LAGRAPH_UNKNOWN if unknown.  For the adjacency matrix of a\n< directed or undirected graph, this is the number of self-edges\n< in the graph."]
    pub nself_edges: i64,
    #[doc = "< minimum edge weight: value, lower bound, or unknown"]
    pub emin: GrB_Scalar,
    pub emin_state: LAGraph_State,
    #[doc = "< maximum edge weight: value, upper bound, or unknown"]
    pub emax: GrB_Scalar,
    pub emax_state: LAGraph_State,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of LAGraph_Graph_struct"][::std::mem::size_of::<LAGraph_Graph_struct>() - 88usize];
    ["Alignment of LAGraph_Graph_struct"][::std::mem::align_of::<LAGraph_Graph_struct>() - 8usize];
    ["Offset of field: LAGraph_Graph_struct::A"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, A) - 0usize];
    ["Offset of field: LAGraph_Graph_struct::kind"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, kind) - 8usize];
    ["Offset of field: LAGraph_Graph_struct::AT"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, AT) - 16usize];
    ["Offset of field: LAGraph_Graph_struct::out_degree"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, out_degree) - 24usize];
    ["Offset of field: LAGraph_Graph_struct::in_degree"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, in_degree) - 32usize];
    ["Offset of field: LAGraph_Graph_struct::is_symmetric_structure"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, is_symmetric_structure) - 40usize];
    ["Offset of field: LAGraph_Graph_struct::nself_edges"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, nself_edges) - 48usize];
    ["Offset of field: LAGraph_Graph_struct::emin"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, emin) - 56usize];
    ["Offset of field: LAGraph_Graph_struct::emin_state"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, emin_state) - 64usize];
    ["Offset of field: LAGraph_Graph_struct::emax"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, emax) - 72usize];
    ["Offset of field: LAGraph_Graph_struct::emax_state"]
        [::std::mem::offset_of!(LAGraph_Graph_struct, emax_state) - 80usize];
};
pub type LAGraph_Graph = *mut LAGraph_Graph_struct;
unsafe extern "C" {
    #[doc = " LAGraph_Init: initializes GraphBLAS and LAGraph.  This method must be\n called before calling any other GrB* or LAGraph* method.  It initializes\n GraphBLAS with GrB_init and then performs LAGraph-specific initializations.\n In particular, the LAGraph semirings listed below are created.  GrB_init can\n also safely be called before calling @sphinxref{LAGr_Init} or LAGraph_Init.\n\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_INVALID_VALUE if LAGraph_Init or LAGr_Init has already been\n      called by the user application.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGraph_Init(msg: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
